# wavedriver

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SAFETY.md  TROUBLESHOOTING.md  justfile  pyproject.toml  run.sh  run_mock.sh  test.sh
.github/workflows/: ci.yml
src/wavedriver/: __init__.py  actuator_protocol.py  config.py  main.py  mock_actuator.py  motor_controller.py  patterns.py  storage.py  ui.py
src/wavedriver/web/: index.html  package-lock.json  package.json  playwright.config.js  vitest.config.js
src/wavedriver/web/e2e/: e2e.test.js
src/wavedriver/web/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx  mock_pywebview.js
src/wavedriver/web/src/components/: ActivityLog.jsx  AdvancedDrawer.jsx  ArcControl.jsx  AudioSyncPanel.jsx  Banner.jsx  ControlPanel.jsx  Footer.jsx  Header.jsx  HelpModal.jsx  InteractiveEdging.jsx  InteractiveEdging.test.jsx  ModeBar.jsx  PatternMode.jsx  SequenceBuilder.jsx  SessionHistory.jsx  SharedControls.jsx  SliderPanel.jsx  StartupModal.jsx  TelemetryPanel.jsx  Toast.jsx  VideoSyncPanel.jsx  WaveformCanvas.jsx  WaveformCanvas.test.jsx
src/wavedriver/web/src/hooks/: useController.js  useController.test.jsx  useKeyboard.js  useKeyboard.test.jsx  useSettings.js  useSettings.test.jsx
tests/: test_driver.py
