[project]
name = "wavedriver"
version = "0.1.0"
description = "Motor driver TUI for Iris Dynamics Orca 6 linear motor"
requires-python = ">=3.12"
dependencies = [
    "pyorcasdk>=1.1.0",
    "textual>=0.80.0",
    "pyserial>=3.5",
]

[project.scripts]
wavedriver = "wavedriver.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
