[project]
name = "wavedriver"
version = "0.1.0"
description = "Web dashboard controller for Iris Dynamics Orca 6 linear motor"
requires-python = ">=3.12"
dependencies = [
    "pyorcasdk>=1.1.0",
    "pyserial>=3.5",
    "pywebview>=5.1.0",
    "qtpy>=2.4.0",
    "PyQt6>=6.1.0",
    "PyQt6-WebEngine>=6.1.0",
]

[project.scripts]
wavedriver = "wavedriver.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["webview.*", "pyorcasdk.*", "serial.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
